# maiascan

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  pyproject.toml  vcpkg.json
cmake/: PythonUtils.cmake
docs/: beat_cheat_engine_architecture.md  feasible_beating_cheat_engine.md  final_architecture_plan.md  final_architecture_plan3.md  memory_scanner_refactoring_plan.md  memory_scanner_refactoring_realistic_review.md  memory_scanner_refactoring_review.md  smart_snapshot_study_guide.md
docs/tex/: plan.tex
scripts/: build.py  lint.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  imgui_extensions.cpp  imgui_extensions.hpp  main.cpp  main_app.cpp
src/fakegame/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  imgui_extensions.cpp  imgui_extensions.h
src/gui/widgets/: process_picker.cpp  process_picker.h
src/maia/: CMakeLists.txt  algorithm.h  assert.cpp  assert.h  assert2.h  logging.h  main.cpp
src/maia/application/: CMakeLists.txt  cheat_table_model.cpp  cheat_table_model.h  cheat_table_model_serialization_test.cpp  cheat_table_model_test.cpp  cheat_table_presenter.cpp  cheat_table_presenter.h  cheat_table_viewmodel.cpp  cheat_table_viewmodel.h  file_dialogs.cpp  file_dialogs.h  global_hotkey_manager.cpp  global_hotkey_manager.h  global_hotkey_manager_win32.cpp  hex_view_presenter.cpp  hex_view_presenter.h  hex_view_viewmodel.cpp  hex_view_viewmodel.h  main_window.cpp  main_window.h  memory_scanner.cpp  memory_scanner.h  memory_scanner_test.cpp  pointer_scanner_model.cpp  pointer_scanner_model.h  pointer_scanner_model_test.cpp  pointer_scanner_presenter.cpp  pointer_scanner_presenter.h  pointer_scanner_viewmodel.cpp  pointer_scanner_viewmodel.h  pointer_scanner_viewmodel_test.cpp  process_model.h  process_model_test.cpp  process_selector_presenter.cpp  process_selector_presenter.h  process_selector_viewmodel.cpp  process_selector_viewmodel.h  scan_presenter.h  scan_result_model.cpp  scan_result_model.h  (+9 more)
src/maia/assets/: maiascan.rc  resource.h
src/maia/console/: CMakeLists.txt  console.cpp  console.h
src/maia/core/: CMakeLists.txt  address_formatter.cpp  address_formatter.h  address_formatter_test.cpp  address_parser.cpp  address_parser.h  cpu_info.cpp  cpu_info.h  formatter_test.cpp  i_memory_accessor.h  i_memory_scanner.h  i_process.h  i_process_attacher.h  memory_common.h  memory_io.h  memory_protection.h  memory_snapshot.cpp  memory_snapshot.h  memory_snapshot_test.cpp  pattern_parser.cpp  pattern_parser.h  pattern_parser_test.cpp  pointer_map.cpp  pointer_map.h  pointer_map_test.cpp  pointer_scanner.cpp  pointer_scanner.h  pointer_scanner_test.cpp  process.cpp  process.h  process_scanner.cpp  process_scanner.h  scan_config.h  scan_result.h  scan_result_test.cpp  scan_session.h  scan_types.h  scanner.cpp  scanner.h  scanner_test.cpp  (+13 more)
src/maia/gui/: CMakeLists.txt  imgui_effects.cpp  imgui_effects.h  imgui_extensions.cpp  imgui_extensions.h  layout.cpp  layout.h  scan_presenter.h
src/maia/gui/models/: hex_view_model.cpp  hex_view_model.h  ui_state.h
src/maia/gui/widgets/: cheat_table_view.cpp  cheat_table_view.h  data_inspector_view.cpp  data_inspector_view.h  hex_cell_styler.cpp  hex_cell_styler.h  hex_cell_styler_test.cpp  hex_view.cpp  hex_view.h  i_widget.h  mapped_regions.h  pointer_scanner_view.cpp  pointer_scanner_view.h  process_picker.cpp  process_picker.h  process_selector.cpp  process_selector.h  process_selector_view.cpp  process_selector_view.h  results_table.cpp  results_table.h  results_table_logic.cpp  results_table_logic.h  results_table_logic_test.cpp  scan_presenter.h  scan_table_view.h  scan_widget2.h  scan_widget_view.h  scanner_controls.h  scanner_view.cpp  scanner_view.h  scanner_widget.h
src/maia/mmem/: CMakeLists.txt  mmem.cpp  mmem.h  proc.h  process_utils.cpp  process_utils.h
src/maia/mmem/platform/win/: proc.cpp
src/maia/mmem/platform2/win/: memory.c  module.c  osprot.c  osprot.h  process.c  segment.c  symbol.c  thread.c
src/maia/mmem/platform2/win/arch/: aarch64.c  arch.h  generic.c  x86.c
src/maia/mmem/platform2/win/libmem/: api.h  libmem.h  libmem.hpp
src/maia/mmem/platform2/win/winutils/: winutils.c  winutils.h
src/maia/python/: CMakeLists.txt  bindings.cpp
src/maia/scanner/: CMakeLists.txt  algorithm.h  i_process_memory_accessor.h  live_process_accessor.cpp  live_process_accessor.h  livre_process_accessor.cpp  livre_process_accessor.h  match.h  memory_common.h  process.cpp  process.h  process_attacher.h  scan.cpp  scan.h  scan_test.cpp  scanner.cpp  scanner.h
src/maia/tests/: CMakeLists.txt  fake_process.cpp  fake_process.h  hex_view_model_test.cpp  task_runner.h
src/maiascan/: CMakeLists.txt  main.cpp
src/maiascan/console/: CMakeLists.txt  commands.h  console.cpp  console.h
src/maiascan/scanner/: CMakeLists.txt  algorithm.h  engine.cpp  engine.h  match.h  process.cpp  process.h  process_test.cpp  scan.cpp  scan.h  scan_test.cpp  scanner.cpp  scanner.h  types.h
src/tests/: CMakeLists.txt
src/tests/integration/: conftest.py  test_check_offsets.py  test_maiascan.py  test_pointer_scan.py  test_scan_types.py
